[add] input e button palindroma

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 
-  <h1>Vuoi sapere se la parola che hai inserito è PALINDROMA ???</h1>
-  <div id="output1"></div>
+  <div>
+    <h1>Vuoi sapere se la parola che hai inserito è PALINDROMA ???</h1>
+
+    <input type="text" placeholder="Scrivi qui la parola" id="parola-inserire">
+    <button class="btn">Invio</button>
+    <div id="output1"></div>
+  </div>
 
 
 
