--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PaliDispari</title>
 
+
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
-  <div>
+  <div class="box">
     <h1>Vuoi sapere se la parola che hai inserito è PALINDROMA ???</h1>
 
     <input type="text" placeholder="Scrivi qui la parola" id="parola-inserire">
