--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PaliDispari</title>
 
+  <!-- BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -17,6 +20,33 @@
     <input type="text" placeholder="Scrivi qui la parola" id="parola-inserire">
     <button class="btn">Invio</button>
     <div id="output1"></div>
+  </div>
+
+
+
+<!-- GIOCO PARI E DISPARI -->
+  <div class="box">
+    <h1>Gioco Pari e Dispari</h1>
+
+    <select class="form-select d-center " aria-label="Default select example" id="pariDispariUtente" >
+
+      <option selected>scegli se vuoi essere PARI o DISPARI</option>
+      <option value="pari">Pari</option>
+      <option value="dispari">Dispari</option>
+      
+    </select>
+
+    <input type="text" placeholder="Scrivi un numero da 1 a 5" id="numero-utente" class="text-center "> <br>
+
+    <button class="btn2">Invio</button> <br>
+
+    <p id="numero-pc"></p>
+
+    <span class="somma-numeri">La somma dei numeri è:</span>
+
+    <div id="output2"></div>
+    <h2 id="output3"></h2>
+
   </div>
 
 
